--- a/themes/Vanir_Inverted/res/values/styles.xml
+++ b/themes/Vanir_Inverted/res/values/styles.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Vanir_Inverted" parent="@*android:style/Theme" />
-    <style name="MmsHoloTheme" parent="@*android:style/Theme.Holo">
-        <item name="android:windowBackground">@color/black</item>
-    </style>
     <style name="Theme.Holo.Light.Dialog" parent="@*android:style/Theme.Holo.Dialog">
         <item name="android:textAppearance">@*android:style/TextAppearance.Holo</item>
         <item name="android:textAppearanceInverse">@*android:style/TextAppearance.Holo.Inverse</item>
@@ -11,6 +8,14 @@
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:editTextColor">@color/holo_blue_light</item>
         <item name="android:textCursorDrawable">@drawable/text_cursor_holo_light</item>
+    </style>
+    <style name="TextAppearance.StatusBar.Expanded" parent="@*android:style/Animation.PopupWindow" />    
+    <style name="TextAppearance.StatusBar.Expanded.Network" parent="@style/TextAppearance.StatusBar.Expanded">
+        <item name="android:textSize">14dp</item>        
+        <item name="android:textColor">#33b5e5</item>
+    </style>
+    <style name="MmsHoloTheme" parent="@*android:style/Theme.Holo">
+        <item name="android:windowBackground">@color/black</item>
     </style>
     <style name="com_android_mms_WidgetTitle" parent="@*android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">#ffffffff</item>
