--- a/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>TORCH</item>
         <item>QUICKRECORD</item>
         <item>MEMORY</item>
+        <item>REBOOTMENU</item>
     </string-array>
 
     <string-array name="available_toggles_values" translatable="false">
@@ -45,6 +46,7 @@
         <item>@string/toggle_torch</item>
         <item>@string/toggle_quickrecord</item>
         <item>@string/toggle_memory</item>
+        <item>@string/toggle_rebootmenu</item>
     </string-array>
 
 </resources>
