--- a/overlay/tab_radio/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/tab_radio/packages/apps/Settings/res/values/arrays.xml
@@ -27,6 +27,8 @@
         <item>QUICKRECORD</item>
         <item>MEMORY</item>
         <item>REBOOTMENU</item>
+        <item>PIE</item>
+        <item>EXPANDED_DESKTOP</item>
     </string-array>
 
     <string-array name="available_toggles_values" translatable="false">
@@ -55,6 +57,8 @@
         <item>@string/toggle_quickrecord</item>
         <item>@string/toggle_memory</item>
         <item>@string/toggle_rebootmenu</item>
+        <item>@string/toggle_pie</item>
+        <item>@string/toggle_expanded_desktop</item>
     </string-array>
 
 </resources>
