--- a/themes/Vanir_Inverted/res/xml/com_android_dialer.xml
+++ b/themes/Vanir_Inverted/res/xml/com_android_dialer.xml
@@ -6,8 +6,9 @@
     <item name="drawable/ab_stacked_opaque_dark_holo">@drawable/com_android_contacts_ab_stacked_opaque_dark_holo</item>
     <item name="drawable/ab_stacked_solid_inverse_holo">@drawable/com_android_contacts_ab_stacked_solid_inverse_holo</item>
     <item name="drawable/action_bar_item_background">@drawable/com_android_contacts_action_bar_item_background</item>
-    <item name="drawable/action_bar_tab">@drawable/com_android_contacts_action_bar_tab</item>
+    <item name="drawable/action_bar_tab">@drawable/com_android_contacts_action_bar_tab</item>    
     <item name="drawable/aggregation_suggestions_bg_light_holo">@drawable/com_android_contacts_aggregation_suggestions_bg_light_holo</item>
+    <item name="drawable/background_dial_holo_dark">@color/black</item>
     <item name="drawable/bg_people_updates_holo">@drawable/com_android_contacts_bg_people_updates_holo</item>
     <item name="drawable/bg_status_contact_widget">@drawable/com_android_contacts_bg_status_contact_widget</item>
     <item name="drawable/btn_call_pressed">@drawable/com_android_contacts_btn_call_pressed</item>
@@ -39,7 +40,9 @@
     <item name="style/EditorActivityTheme">@style/EditorActivityTheme</item>
     <item name="style/BackgroundOnlyTheme">@style/BackgroundOnlyTheme</item>
     <item name="style/Theme.QuickContact">@style/Theme.QuickContact</item>
+    <item name="style/CallDetailActivityTheme1">@style/CallDetailActivityTheme1</item>
     <item name="style/PeopleTheme1">@style/PeopleTheme1</item>
+    <item name="style/DialtactsTheme1">@style/DialtactsTheme1</item>
     <item name="style/ContactsActionBarStyle">@style/ContactsActionBarStyle</item>
     <item name="style/ContactsActionBarDropDownStyle">@style/ContactsActionBarDropDownStyle</item>
     <item name="style/ContactsActionBarTabView">@style/ContactsActionBarTabView</item>
@@ -63,7 +66,20 @@
     <item name="color/background_primary">@color/com_android_contacts_background_primary</item>
     <item name="color/background_social_updates">@color/com_android_contacts_background_social_updates</item>
     <item name="color/black_text">@color/com_android_contacts_black_text</item>
+    <item name="color/call_detail_background">@color/com_android_contacts_call_detail_background</item>
     <item name="color/call_detail_photo_bg">@color/com_android_contacts_call_detail_photo_bg</item>
+    <item name="color/call_detail_separator">@color/com_android_contacts_call_detail_separator</item>
+    <item name="color/call_log_divider">@color/com_android_contacts_call_log_divider</item>
+    <item name="color/call_log_missed_call_highlight_color">@color/com_android_contacts_call_log_missed_call_highlight_color</item>
+    <item name="color/call_log_primary_text_color">@color/com_android_contacts_call_log_primary_text_color</item>
+    <item name="color/call_log_primary_background_color">@color/com_android_contacts_call_log_primary_background_color</item>
+    <item name="color/call_log_secondary_text_color">@color/com_android_contacts_call_log_secondary_text_color</item>
+    <item name="color/call_log_secondary_background_color">@color/com_android_contacts_call_log_secondary_background_color</item>
+    <item name="color/call_log_header_color">@color/com_android_contacts_call_log_header_color</item>
+    <item name="color/call_log_voicemail_highlight_color">@color/com_android_contacts_call_log_voicemail_highlight_color</item>
+    <item name="color/call_log_voicemail_status_background_color">@color/com_android_contacts_call_log_voicemail_status_background_color</item>
+    <item name="color/call_log_voicemail_status_text_color">@color/com_android_contacts_call_log_voicemail_status_text_color</item>
+    <item name="color/call_log_voicemail_status_action_text_color">@color/com_android_contacts_call_log_voicemail_status_action_text_color</item>
     <item name="color/contact_count_text_color">@color/com_android_contacts_contact_count_text_color</item>
     <item name="color/contact_detail_fragment">@color/com_android_contacts_contact_detail_fragment</item>
     <item name="color/contact_tile_name_text">@color/com_android_contacts_contact_tile_name_text</item>
@@ -71,6 +87,8 @@
     <item name="color/detail_tab_carousel_tab_label_Background_color">@color/com_android_contacts_detail_tab_carousel_tab_label_Background_color</item>
     <item name="color/detail_tab_carousel_tab_label_color">@color/com_android_contacts_detail_tab_carousel_tab_label_color</item>
     <item name="color/detail_update_tab_text_color">@color/com_android_contacts_detail_update_tab_text_color</item>
+    <item name="color/dialpad_switch_bg">@color/com_android_contacts_dialpad_switch_bg</item>
+    <item name="color/dialtacts_secondary_text_color">@color/com_android_contacts_dialtacts_secondary_text_color</item>
     <item name="color/image_placeholder">@color/com_android_contacts_image_placeholder</item>
     <item name="color/item_selected">@color/com_android_contacts_item_selected</item>
     <item name="color/people_app_theme_color">@color/com_android_contacts_people_app_theme_color</item>
@@ -86,6 +104,9 @@
     <item name="color/stream_item_stripe_color">@color/com_android_contacts_stream_item_stripe_color</item>
     <item name="color/textColorIconOverlay">@color/com_android_contacts_textColorIconOverlay</item>
     <item name="color/textColorIconOverlayShadow">@color/com_android_contacts_textColorIconOverlayShadow</item>
+    <item name="color/voicemail_playback_ui_background">@color/com_android_contacts_voicemail_playback_ui_background</item>
+    <item name="color/voicemail_playback_seek_bar_yet_to_play">@color/com_android_contacts_voicemail_playback_seek_bar_yet_to_play</item>
+    <item name="color/voicemail_playback_seek_bar_already_played">@color/com_android_contacts_voicemail_playback_seek_bar_already_played</item>
     <item name="color/white_text">@color/com_android_contacts_white_text</item>
     <item name="color/primary_text_color">@color/primary_text_color</item>
     <item name="color/secondary_text_color">@color/secondary_text_color</item>
