--- a/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
@@ -17,12 +17,12 @@
         <item>GPS</item>
         <item>ROTATE</item>
         <item>SILENT</item>
-        <item>VIBRATE</item>
         <item>SYNC</item>
         <item>FCHARGE</item>
         <item>REBOOTMENU</item>
         <item>QUICKRECORD</item>
         <item>PIE</item>
+        <item>HALO</item>
         <item>EXPANDED_DESKTOP</item>
         <item>IME</item>
     </string-array>
@@ -42,12 +42,12 @@
         <item>@string/toggle_gps</item>
         <item>@string/toggle_auto_rotate</item>
         <item>@string/toggle_silent</item>
-        <item>@string/toggle_vibrate</item>
         <item>@string/toggle_sync</item>
         <item>@string/toggle_fcharge</item>
         <item>@string/toggle_rebootmenu</item>
         <item>@string/toggle_quickrecord</item>
         <item>@string/toggle_pie</item>
+        <item>@string/toggle_halo</item>
         <item>@string/toggle_expanded_desktop</item>
         <item>@string/toggle_ime</item>
     </string-array>
