add missing overlays for halo toggle
Change-Id: Ic1df6710d7b41e837843db0a5b48557ff6f32d36

--- a/overlay/cdma_phone/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/cdma_phone/packages/apps/Settings/res/values/arrays.xml
@@ -28,6 +28,7 @@
         <item>REBOOTMENU</item>
         <item>QUICKRECORD</item>
         <item>PIE</item>
+        <item>HALO</item>
         <item>EXPANDED_DESKTOP</item>
         <item>IME</item>
     </string-array>
@@ -58,6 +59,7 @@
         <item>@string/toggle_rebootmenu</item>
         <item>@string/toggle_quickrecord</item>
         <item>@string/toggle_pie</item>
+        <item>@string/toggle_halo</item>
         <item>@string/toggle_expanded_desktop</item>
         <item>@string/toggle_ime</item>
     </string-array>
