--- a/overlay/tab_radio/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/tab_radio/packages/apps/Settings/res/values/arrays.xml
@@ -27,6 +27,7 @@
         <item>REBOOTMENU</item>
         <item>QUICKRECORD</item>
         <item>PIE</item>
+        <item>HALO</item>
         <item>EXPANDED_DESKTOP</item>
         <item>IME</item>
     </string-array>
@@ -56,6 +57,7 @@
         <item>@string/toggle_rebootmenu</item>
         <item>@string/toggle_quickrecord</item>
         <item>@string/toggle_pie</item>
+        <item>@string/toggle_halo</item>
         <item>@string/toggle_expanded_desktop</item>
         <item>@string/toggle_ime</item>
     </string-array>
