--- a/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/tab_no_radio/packages/apps/Settings/res/values/arrays.xml
@@ -25,6 +25,7 @@
         <item>HALO</item>
         <item>EXPANDED_DESKTOP</item>
         <item>IME</item>
+        <item>TIMEOUT</item>
     </string-array>
 
     <string-array name="available_toggles_values" translatable="false">
@@ -50,6 +51,7 @@
         <item>@string/toggle_halo</item>
         <item>@string/toggle_expanded_desktop</item>
         <item>@string/toggle_ime</item>
+        <item>@string/toggle_timeout</item>
     </string-array>
 
     <string-array name="available_OGtoggles_entries" translatable="false">
