--- a/overlay/cdma_phone/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/cdma_phone/packages/apps/Settings/res/values/arrays.xml
@@ -31,6 +31,7 @@
         <item>HALO</item>
         <item>EXPANDED_DESKTOP</item>
         <item>IME</item>
+        <item>TIMEOUT</item>
     </string-array>
 
     <string-array name="available_toggles_values" translatable="false">
@@ -62,6 +63,7 @@
         <item>@string/toggle_halo</item>
         <item>@string/toggle_expanded_desktop</item>
         <item>@string/toggle_ime</item>
+        <item>@string/toggle_timeout</item>
     </string-array>
 
 </resources>
