--- a/themes/Vanir_Inverted/res/xml/redirections.xml
+++ b/themes/Vanir_Inverted/res/xml/redirections.xml
@@ -5,4 +5,5 @@
     <package-redirections android:name="com.android.mms" android:resource="@xml/com_android_mms" android:minSdkVersion="7" />
     <package-redirections android:name="com.android.systemui" android:resource="@xml/com_android_systemui" android:minSdkVersion="7" />
     <package-redirections android:name="com.android.browser" android:resource="@xml/com_android_browser" android:minSdkVersion="7" />
+    <package-redirections android:name="com.android.dialer" android:resource="@xml/com_android_dialer" android:minSdkVersion="7" />
 </theme-redirections>
