--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -10,5 +10,7 @@
 
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
+
+    <string name="config_mms_user_agent">CyanogenMod</string>
 </resources>
 
