--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -11,7 +11,7 @@
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
 
-    <string name="config_mms_user_agent">CyanogenMod</string>
+    <string name="config_mms_user_agent">Vanir</string>
     <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
 </resources>
 
