--- a/overlay/common/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/common/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -23,5 +23,7 @@
     <integer name="def_notif_count">0</integer>
     <!-- Right QS pulldown -->
     <integer name="def_qs_quick_pulldown">1</integer>
+    <!-- Default value of Settings.System.DOUBLE_TAP_SLEEP_GESTURE -->
+    <integer name="def_double_tap_sleep_gesture">0</integer>
 
 </resources>
